# phishradar

./: .gitignore  README.md  pyproject.toml
config/: brands.yml
ingest/: ct_poller.py  requirements.txt
sql/: 00_setup.sql  01_rbac.sql  05_git_repo.sql  10_raw.sql  20_silver.sql  30_gold.sql  40_governance.sql  50_share.sql
