[project]
name = "phishradar"
version = "0.1.0"
description = "Détection temps réel de domaines de phishing via les Certificate Transparency logs, sur Snowflake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "cryptography>=42.0",
    "snowflake-connector-python>=3.7",
    "rapidfuzz>=3.6",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
